--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background: #fff;
+  background: #e9e5e569;
   display: flex;
   justify-content: space-between;  /* logo left, nav links right */
   align-items: center;
